@@ -98,7 +98,7 @@ function nv_dump_save($params)
     if (! isset($params['tables']) or ! is_array($params['tables']) or $params['tables'] == array()) {
         return false;
     }
-    
+
     $params['tables'] = array_map('trim', $params['tables']);
     $tables = array();
     $dbsize = 0;
@@ -131,7 +131,7 @@ function nv_dump_save($params)
         return false;
     }
 
-    $template = explode('@@@', file_get_contents(NV_ROOTDIR . '/themes/admin_default/system/dump.tpl'));
+    $template = explode('@@@', file_get_contents(NV_ROOTDIR . '/' . NV_ASSETS_DIR . '/tpl/dump.tpl'));
 
     $patterns = array( "/\{\|SERVER_NAME\|\}/", "/\{\|GENERATION_TIME\|\}/", "/\{\|SQL_VERSION\|\}/", "/\{\|PHP_VERSION\|\}/", "/\{\|DB_NAME\|\}/", "/\{\|DB_CHARACTER\|\}/", "/\{\|DB_COLLATION\|\}/" );
     $replacements = array( $db->server, gmdate("F j, Y, h:i A", NV_CURRENTTIME) . " GMT", $db->getAttribute(PDO::ATTR_SERVER_VERSION), PHP_VERSION, $db->dbname, $db_config['charset'], $db_config['collation'] );
