@@ -17,8 +17,8 @@ $rules = array( '60' => $global_config['max_requests_60'], '300' => $global_conf
 $flb = new NukeViet\Core\FloodBlocker(NV_ROOTDIR . '/' . NV_LOGS_DIR . '/ip_logs', $rules, NV_CLIENT_IP);
 
 if ($flb->is_blocker) {
-    if (! defined('NV_IS_AJAX') and file_exists(NV_ROOTDIR . '/themes/default/system/flood_blocker.tpl')) {
-        $xtpl = new XTemplate('flood_blocker.tpl', NV_ROOTDIR . '/themes/default/system');
+    if (!defined('NV_IS_AJAX') and file_exists(NV_ROOTDIR . '/' . NV_ASSETS_DIR . '/tpl/flood_blocker.tpl')) {
+        $xtpl = new XTemplate('flood_blocker.tpl', NV_ROOTDIR . '/' . NV_ASSETS_DIR . '/tpl/flood_blocker.tpl');
         $xtpl->assign('PAGE_TITLE', $lang_global['flood_page_title']);
         $xtpl->assign('IMG_SRC', NV_BASE_SITEURL . NV_ASSETS_DIR . '/images/load_bar.gif');
         $xtpl->assign('IMG_WIDTH', 33);
